# warp-tools

./: .gitignore  .warp-orchestrator.plugins.json  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  decisions.md  projects.registry.json  pyproject.toml
.hippo/: hippo.db
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
.warp/: .mcp.json
archive/node-legacy/: package.json  projects.registry.json
archive/node-legacy/.warp/: .mcp.json
archive/node-legacy/cli/: warp-tools.mjs
archive/node-legacy/mcp-orchestrator/: README.md  package.json  pnpm-lock.yaml  server.mjs
archive/node-legacy/mcp-orchestrator/scripts/: bulk-audit.py
archive/node-legacy/scripts/: install-cli-app.sh  uninstall-cli-app.sh
archive/node-legacy/tests/: warp-tools-update.test.mjs
cli/: __init__.py  main.py
orchestrator/: README.md  mcp_orchestrator.py  pyproject.toml
orchestrator/plugins/github-starter/: README.md  github_starter_hook.py  plugin.json
orchestrator/plugins/plugin-dev-starter/: README.md  plugin.json  plugin_dev_starter_hook.py
orchestrator/tests/: test_claude_plugin_bridge.py
scripts/: install-cli-app.sh  uninstall-cli-app.sh
specs/001-orchestrator-plugin-hook-runtime/: spec.md  tasks.md
specs/002-orchestrator-plugin-platform/: spec.md  tasks.md
tests/: test_warp_tools_plugin.py  test_warp_tools_plugin_readiness.py  test_warp_tools_update.py
